--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "@types/express": "^4.17.2",
     "@types/jest": "25.1.3",
     "@types/node": "^13.7.4",
+    "@types/passport": "^1.0.2",
+    "@types/passport-jwt": "^3.0.3",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.20.0",
     "@typescript-eslint/parser": "^2.20.0",
